@@ -1,3 +1,19 @@
-Andy Buckley
-Steve Lloyd
-Martin Ruefenacht
+LHAPDF6 AUTHORS
+===============
+
+Code contributors:
+  Andy Buckley
+  James Ferrando
+  Steve Lloyd
+  Martin Ruefenacht
+
+Testing, advice, etc.:
+  Richard Ball
+  Luigi del Debbio
+  Nathan Hartland
+  Karl Nordstrom
+  Ben Page
+  Juan Rojo
+  Marek Schoenherr
+  Graeme Watt
+  Mike Whalley
