@@ -1,0 +1,13 @@
+// -*- C++ -*-
+//
+// This file is part of LHAPDF
+// Copyright (C) 2012-2013 The LHAPDF collaboration (see AUTHORS for details)
+//
+#pragma once
+
+/// @file Just a convenience header that pulls in the main functionality with a single #include
+
+#include "LHAPDF/Config.h"
+#include "LHAPDF/PDF.h"
+#include "LHAPDF/Factories.h"
+#include "LHAPDF/PDFIndex.h"
